[gd_scene load_steps=3 format=3 uid="uid://djgbofmkkrrvh"]

[ext_resource type="Script" path="res://scripts/bhv_action_area.gd" id="1_dlqib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6v0qi"]
size = Vector2(278, 334)

[node name="ObjActionArea" type="Node2D"]
script = ExtResource("1_dlqib")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -23)
shape = SubResource("RectangleShape2D_6v0qi")
debug_color = Color(0.37171, 0.607901, 0.275084, 0.42)

[node name="PlayerActionTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
